--- a/config/teacher.yaml
+++ b/config/teacher.yaml
@@ -1,4 +1,4 @@
-model_name_or_path: "Zhe-Zhang/GPT2-Large-BabyLM"
+model_name_or_path: "meta-llama/Llama-3.1-8B-Instruct"
 prompt_template_path: "prompts/teacher_prompt.md"
 temperature: 0.2
 max_tokens: 6
