--- a/eval/requirements.txt
+++ b/eval/requirements.txt
@@ -23,7 +23,7 @@ hf-xet==1.1.0
 huggingface-hub==0.31.0
 idna==3.10
 ipdb==0.13.13
-ipython==9.2.0
+ipython>=8.0.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
