--- a/config/teacher.yaml
+++ b/config/teacher.yaml
@@ -1,7 +1,8 @@
 model_name_or_path: "meta-llama/Llama-3.1-8B-Instruct"
+# model_name_or_path: "mistralai/Mistral-7B-Instruct-v0.2"
 prompt_template_path: "prompts/teacher_prompt.md"
-temperature: 0.2
-max_tokens: 6
+temperature: 0.2 # 0.1
+max_tokens: 16 # 6
 min_score: 0
 max_score: 3
 default_score: 0.5
