--- a/config/ppo.yaml
+++ b/config/ppo.yaml
@@ -1,4 +1,4 @@
-model_name: LMSeed/GPT2Pretrained-Small-Distilled-900M
+model_name: LMSeed/GPT2-small-distilled-900M
 revision_name: null
 learning_rate: 1e-6
 log_with: wandb
@@ -8,8 +8,8 @@ hf_org : LMSeed # Save the model in my account
 
 # Trainer Settings
 num_epochs: 1
-batch_size: 128 # 360, 64
-token_limit: 1000000 # 1000000
+batch_size: 32 # 128 # 360, 64
+token_limit: 1000 # 1000000 # 1000000
 checkpoint_interval: 200000
 save_base_dir: models/
 
